SomeComposite is loadable

--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@
 * Enable Rails forgery protection after Ext.Ajax.extraParams has effect again.
 * Get rid of createDelegate
 
+Make :lazy_loading "true" by default when defining a child component
 Make :items option understand also a hash.
 Caching for netzke_controller-provided JS and CSS.
 Caching - investigate reusing (fragment?) caching of Rails.
