--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,5 @@
+= v0.6.7 - to be released
+
 = v0.6.6 - 2011-02-26
 * enhancements
   * Client-server communication is updated to use Ext.Direct (many thanks to @pschyska)
