--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+= ???
+* enhancements
+  * Less aggressive rescuing at constantizing a string, to let more descriptive exceptions get through.
+
 = v0.7.3 - 2011-09-04
 * Rails 3.1 compatibility. Really. Hopefully.
 
