--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,7 +1,7 @@
 = ???
 * enhancements
   * Less aggressive rescuing at constantizing a string, to let more descriptive exceptions get through.
-  * A little "title" helper DSL method replacing js_property :title, <...>
+  * New +delegates_to_dsl+ class method to degelate default config options to class level. See the +ConfigToDslDelegator+ module.
 
 = v0.7.3 - 2011-09-04
 * Rails 3.1 compatibility. Really. Hopefully.
@@ -54,7 +54,7 @@
 = v0.6.7 - 2011-08-16
 * enhancements
   * No more using +method_missing+ for invoking endpoints.
-  * New "cache" option for `netzke_init` which gets passed to `javascript_include_tag` (no support for css caching of this type yet)
+  * New "cache" option for +netzke_init+ which gets passed to +javascript_include_tag+ (no support for css caching of this type yet)
   * Netzke dynamic js and css-files such as ext.js, touch.css, now get generated at the application start, and put into "public/netzke". Solves a long standing problem with serving those files by HTTP servers in some cases. Enables caching naturally.
   * Moved features and specs to test/core_test_app (tests should be run from that folder from now on)
   * Introduced plugin functionality. We can create Netzke components that are pluggable into other components as Ext JS plugins.
@@ -64,7 +64,7 @@
   * Client-server communication is updated to use Ext.Direct (many thanks to @pschyska)
   * Introduced +js_translate+ class method that allows specifying i18n properties used in the JavaScript class
   * Better handling of actions i18n
-  * New `Netzke::Base.class_config_option` method to specify a class-level configuration options for a component, e.g. (in GridPanel): `class_config_option :column_filters_available, true`. This option then can be set in Rails application configuration, e.g.: `config.netzke.basepack.grid_panel.column_filters_available = false`, or directly on `Netzke::Core.config`, e.g.: `Netzke::Core.config.netzke.basepack.grid_panel.column_filters_available = false`.
+  * New +Netzke::Base.class_config_option+ method to specify a class-level configuration options for a component, e.g. (in GridPanel): +class_config_option :column_filters_available, true+. This option then can be set in Rails application configuration, e.g.: `config.netzke.basepack.grid_panel.column_filters_available = false`, or directly on `Netzke::Core.config`, e.g.: `Netzke::Core.config.netzke.basepack.grid_panel.column_filters_available = false`.
 
 = v0.6.5 - 2011-01-14
 * enhancements
