--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,6 @@
+= v0.7.6 - ?
+* Using Travis CI
+
 = v0.7.5 - 2012-03-05
 * API changes
   * The :class_name option must *always* include the full class name now. So, "Basepack::GridPanel" won't work, instead do "Netzke::Basepack::GridPanel"
