--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,13 @@
-= v0.7.6 - ?
+= v0.8.0 - WIP
+* upcoming
+  * Ext JS 4.1 support
+  * Drop Ruby 1.8.7
+  * Configuration rethought
+  * Major code clean-up
+
+= v0.7.6 - WIP
 * Using Travis CI
+* Rails 3.2
 
 = v0.7.5 - 2012-03-05
 * API changes
