--- a/test/core_test_app/config/locales/en.yml
+++ b/test/core_test_app/config/locales/en.yml
@@ -1,6 +1,3 @@
-# Sample localization file for English. Add more files in this directory for other locales.
-# See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
 en:
   server_caller:
     actions:
@@ -13,7 +10,7 @@ en:
       bug_server:
         text: Call server extensively
         tooltip: This bugs server in its own way
-  localized_panel:
+  localization:
     title: Localized Panel
     property_one: First property
     property_two: Second property
