--- a/test/core_test_app/config/locales/es.yml
+++ b/test/core_test_app/config/locales/es.yml
@@ -1,8 +1,5 @@
-# Sample localization file for English. Add more files in this directory for other locales.
-# See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
 es:
-  localized_panel:
+  localization:
     title: Panel Localizada
     property_one: Primera propriedad
     property_two: Segunda propriedad
