Move specs from core_test_app into root specs
Make rake task run new specs

--- a/test/core_test_app/config/locales/en.yml
+++ b/test/core_test_app/config/locales/en.yml
@@ -1,4 +1,14 @@
 en:
+  foo:
+    actions:
+      foo_action:
+        text: 'Foo'
+        tooltip: 'Foo!'
+  foo_ext:
+    actions:
+      foo_action:
+        text: 'Foo plus'
+        tooltip: 'Foo plus!'
   server_caller:
     actions:
       bug_server:
