Update to work with Ext 4.2

--- a/test/core_test_app/config/locales/es.yml
+++ b/test/core_test_app/config/locales/es.yml
@@ -9,3 +9,5 @@ es:
         text: Primera acción
       action_three:
         text: Tercera acción
+      show_properties:
+        text: Muestra propriedades
