Minor naming fix in specs

--- a/spec/rails_app/config/locales/en.yml
+++ b/spec/rails_app/config/locales/en.yml
@@ -1,12 +1,12 @@
 en:
   foo:
     actions:
-      foo_action:
+      foo:
         text: 'Foo'
         tooltip: 'Foo!'
   foo_ext:
     actions:
-      foo_action:
+      foo:
         text: 'Foo plus'
         tooltip: 'Foo plus!'
   server_caller:
